--- a/src/TypeFlow.css
+++ b/src/TypeFlow.css
@@ -6,6 +6,7 @@
     position: relative;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     background: #333;
     padding: 15px;
     font-size: 1.5em;
@@ -30,7 +31,7 @@
 .letter-focused {
     color: #ff4998;
     font-weight: bold;
-    font-size: 2em;
+    font-size: 1.7em;
 }
 .letter-valid {
     color: #01cc74
